framework: increase MaxPermSize for the unit tests to get them running in Jenkins